--- a/app/templates/locations.hbs
+++ b/app/templates/locations.hbs
@@ -1,3 +1,27 @@
 <h2>Locations</h2>
 
-{{outlet}}
+
+<div class="Generation-controls">
+    <div class="row">
+        <div class="input-field col s6">
+            {{input id="num_rows" type="number" value=numRows min="1"}}
+            <label for="num_rows" class="active">Rows</label>
+        </div>
+    </div>
+
+    <button type="button" class="waves-effect waves-light btn" onclick={{action 'generateLocations'}}>Regenerate</button>
+</div>
+
+<div class="card-panel">
+    <table class="striped centered">
+        <tbody>
+            {{#each locationRows as |row|}}
+                <tr>
+                    {{#each row as |value|}}
+                        <td>{{value}}</td>
+                    {{/each}}
+                </tr>
+            {{/each}}
+        </tbody>
+    </table>
+</div>
