Coercing number field to display numeric keyboard on mobile browsers

--- a/app/templates/locations.hbs
+++ b/app/templates/locations.hbs
@@ -4,7 +4,7 @@
 <div class="Generation-controls">
     <div class="row">
         <div class="input-field col s6">
-            {{input id="num_rows" type="number" value=numRows min="1"}}
+            {{input id="num_rows" pattern="\d*" type="number" value=numRows min="1"}}
             <label for="num_rows" class="active">Rows</label>
         </div>
     </div>
