Abstracting logic for generatable routes fully into mixin

--- a/app/templates/locations.hbs
+++ b/app/templates/locations.hbs
@@ -15,7 +15,7 @@
 <div class="card-panel">
     <table class="striped centered">
         <tbody>
-            {{#each locationRows as |row|}}
+            {{#each itemRows as |row|}}
                 <tr>
                     {{#each row as |value|}}
                         <td>{{value}}</td>
