--- a/app/templates/messages.hbs
+++ b/app/templates/messages.hbs
@@ -1,4 +1,4 @@
-<h2>Locations</h2>
+<h2>Messages</h2>
 
 
 <div class="Generation-controls">
@@ -32,5 +32,3 @@
 }}
     {{json-editor json=grammarConfig onChange=(action (mut grammarConfig))}}
 {{/materialize/m-collapsible}}
-
-
