--- a/app/styles/inspiration-engine.scss
+++ b/app/styles/inspiration-engine.scss
@@ -21,6 +21,12 @@
   min-height: 300px;
 }
 
+.Collapsible-bleed {
+  .collapsible-body {
+    padding: 0;
+  }
+}
+
 .Text--debug {
   padding: 5px;
   color: #000 !important;
