--- a/app/templates/locations.hbs
+++ b/app/templates/locations.hbs
@@ -29,6 +29,7 @@
 {{#materialize/m-collapsible 
     icon='mode_edit'
     title="Edit Grammar JSON"
+    classNames="Collapsible-bleed"
 }}
     {{json-editor json=grammarConfig onChange=(action (mut grammarConfig))}}
 {{/materialize/m-collapsible}}
