--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,8 @@
 @import "components/color-variables";
 @import "components/color-classes";
 
+@import "materialize-overrides";
+
 // Variables;
 @import "components/variables";
 
