--- a/app/styles/inspiration-engine.scss
+++ b/app/styles/inspiration-engine.scss
@@ -1,7 +1,3 @@
-/* @TODO pick colours
-  https://material.io/tools/color/#!/?view.left=0&view.right=0&primary.color=64B5F6&primary.text.color=FAFAFA&secondary.color=607D8B
-*/
-
 .Nav-header {
   margin: 0 auto;
   max-width: 1280px;
@@ -17,10 +13,6 @@
   margin-bottom: 24px;
 }
 
-.jsoneditor-tree {
-  min-height: 300px;
-}
-
 .Collapsible-bleed {
   .collapsible-body {
     padding: 0;
@@ -33,4 +25,18 @@
   border: 1px dashed #000 !important;
   background-color: #FC0 !important;
   white-space: pre-line !important;
+}
+
+// JSON Editor overrides
+.jsoneditor {
+  border-color: $secondary-color !important;
+}
+
+.jsoneditor-tree {
+  min-height: 300px;
+}
+
+.jsoneditor-menu {
+  background-color: $secondary-color !important;
+  border-bottom-color: $secondary-color !important;
 }
